--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -141,7 +141,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="wW1Ue+RKLNQk4O7Syh0SFwO8/KFBbve8RdIznyniyPZBdXI9VS+C4hSIDwzv2qGwb2op0j0KLitnPda5NYK2eT/YnR4jt7tP2YpcZZYZMgwqn0xXnrdqtXXKcmcKCJ6Q">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="27DCJP7L7P33Luhf7JpMRBcXG4RkQjef2YeOPfByIG3llJJWB8lpqXP4CopW2a6yFL9NsLYk6tXUS0pUE4PkgVW0XhLVjs5liyYSwy5BK/MNB8Hsw32q81JqIDBAy3ys">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
