--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/m">free website design templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Vy/q6D6skt4xKCFAgiYvIM2vqc1iVcCjN/fk5YU0vSxdm+oJKQDfRjPtDCf9i6AKQrJi9rbtEnGpEHnyDpVB7sGLGpZjQdu5kKqYBu0QxegJc2FzFmU1mKz6BNCNgnix">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="R/153Cvn5862gwsMsHNGN4p/8bOcP90aJQPwlwo08LeFi2UMfDdFZuaV7uGBU3onFG9Giv58Eoa1QcWdIzEjRGiIMu4Zr+owSdGNyHBlDhvScf3cZcWvU7+nDLA4BjRB">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
